Fixed tapping links not working on work page on iOS

--- a/css/page/_work.scss
+++ b/css/page/_work.scss
@@ -10,6 +10,7 @@
 	}
 
 	.work-item-inner {
+		display: block;
 		position: relative;
 		height: 0;
 		padding-bottom: 100%;
